--- a/Asistencia/src/main/resources/fxml/main_asistencia.fxml
+++ b/Asistencia/src/main/resources/fxml/main_asistencia.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pe.edu.upeu.asistencia.control.Asistenciacontroller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pe.edu.upeu.asistencia.control.AsistenciaController">
    <children>
-      <Label layoutX="152.0" layoutY="22.0" text="ejemplo" />
-      <TextField fx:id="txtnum1" layoutX="99.0" layoutY="39.0" />
-      <TextField fx:id="txtnum2" layoutX="275.0" layoutY="39.0" />
-      <Button layoutX="443.0" layoutY="39.0" mnemonicParsing="false" onAction="#sumar" text="sumar" />
-      <Label fx:id="txtresult" layoutX="160.0" layoutY="77.0" text="Label" />
+      <Label layoutX="127.0" layoutY="14.0" text="Ejemplo" />
+      <TextField fx:id="txtNum1" layoutX="127.0" layoutY="58.0" />
+      <TextField fx:id="txtNum2" layoutX="300.0" layoutY="58.0" />
+      <Button layoutX="467.0" layoutY="58.0" mnemonicParsing="false" onAction="#sumar" text="Sumar" />
+      <Label fx:id="txtResult" layoutX="127.0" layoutY="109.0" text="Label" />
    </children>
 </AnchorPane>
