--- a/Asistencia/src/main/resources/fxml/main_participante.fxml
+++ b/Asistencia/src/main/resources/fxml/main_participante.fxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+|1  <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -61,7 +61,7 @@
                               <Label prefHeight="17.0" prefWidth="101.0" text="Participante" GridPane.rowIndex="5" />
                               <ComboBox fx:id="cbxCarrera" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="4" />
                               <ComboBox fx:id="cbxTipoParticipante" maxWidth="1.7976931348623157E308" prefWidth="150.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar" GridPane.columnIndex="1" GridPane.rowIndex="6">
+                              <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#crearParticipante" text="Guardar" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                  <GridPane.margin>
                                     <Insets right="5.0" />
                                  </GridPane.margin>
